@@ -1,7 +1,7 @@
 package at.ac.fhcampuswien.fhmdb;
 
-import at.ac.fhcampuswien.fhmdb.models.Genre;
 import at.ac.fhcampuswien.fhmdb.models.Movie;
+import at.ac.fhcampuswien.fhmdb.service.MovieAPI;
 import at.ac.fhcampuswien.fhmdb.ui.MovieCell;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXComboBox;
@@ -13,10 +13,11 @@ import javafx.fxml.Initializable;
 import javafx.scene.control.TextField;
 
 import java.net.URL;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.ResourceBundle;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class HomeController implements Initializable {
@@ -31,6 +32,10 @@ public class HomeController implements Initializable {
 
     @FXML
     public JFXComboBox<Object> genreComboBox;
+    @FXML
+    public JFXComboBox<Object> yearComboBox;
+    @FXML
+    public JFXComboBox<Object> ratingComboBox;
 
     @FXML
     public JFXButton sortBtn;
@@ -46,6 +51,8 @@ public class HomeController implements Initializable {
         initializeMovies();
         initializeUi();
         initializeGenre();
+        initializeYear();
+        initializeRating();
         handleResetButton();
         handleSortingMechanism();
         handleSearchbarFilter();
@@ -57,13 +64,41 @@ public class HomeController implements Initializable {
     }
 
     public void initializeMovies() {
-        allMovies = Movie.initializeMovies();
+        allMovies = MovieAPI.getAllMovies();
         observableMovies.addAll(allMovies);
     }
 
     public void initializeGenre() {
+        List<String> uniqueGenres = allMovies.stream()
+                .flatMap(movie -> movie.getGenre().stream())
+                .distinct()
+                .sorted()
+                .collect(Collectors.toList());
+
         genreComboBox.setPromptText("Filter by Genre");
-        genreComboBox.getItems().addAll(Arrays.stream(Genre.values()).map(Enum::name).toList());
+        genreComboBox.getItems().addAll(uniqueGenres);
+    }
+
+    public void initializeYear() {
+        List<Integer> uniqueYears = allMovies.stream()
+                .map(Movie::getReleaseYear)
+                .distinct()
+                .sorted()
+                .collect(Collectors.toList());
+
+        yearComboBox.setPromptText("Filter by Release Year");
+        yearComboBox.getItems().setAll(uniqueYears);
+    }
+
+    public void initializeRating() {
+        List<Double> uniqueRatings = allMovies.stream()
+                .map(Movie::getRating)
+                .distinct()
+                .sorted()
+                .collect(Collectors.toList());
+
+        ratingComboBox.setPromptText("Filter by Rating");
+        ratingComboBox.getItems().setAll(uniqueRatings);
     }
 
     private void handleSearchbarFilter() {
@@ -81,28 +116,53 @@ public class HomeController implements Initializable {
             }
         });
     }
+
     private void handleResetButton() {
         resetBtn.setOnAction(actionEvent -> {
             searchField.setText("");
             genreComboBox.getSelectionModel().select(null);
+            yearComboBox.getSelectionModel().select(null);
+            ratingComboBox.getSelectionModel().select(null);
             observableMovies.setAll(allMovies);
         });
     }
 
     private void applyFilters() {
         String searchQuery = searchField.getText() == null ? "" : searchField.getText().trim().toLowerCase();
-        String selectedGenre = (genreComboBox.getValue() == null) ? "" : genreComboBox.getValue().toString().toUpperCase();
+        String selectedGenre = (genreComboBox.getValue() == null) ? "" : genreComboBox.getValue().toString();
+        String selectedYear = (yearComboBox.getValue() == null) ? "" : yearComboBox.getValue().toString();
+        String selectedRating = (ratingComboBox.getValue() == null) ? "" : ratingComboBox.getValue().toString();
 
-        List<Movie> filteredMovies = filterMovieByQueryOrGenre(searchQuery, selectedGenre);
+
+        List<Movie> filteredMovies = filterMovieByQueryOrGenre(searchQuery, selectedGenre, selectedYear, selectedRating);
 
         observableMovies.setAll(filteredMovies);
     }
 
-    public List<Movie> filterMovieByQueryOrGenre(String searchQuery, String selectedGenre) {
-        return allMovies.stream()
-                .filter(movie -> (searchQuery.isEmpty() || movie.getTitle().toLowerCase().contains(searchQuery) || movie.getDescription().toLowerCase().contains(searchQuery)))
-                .filter(movie -> (selectedGenre.isEmpty() || movie.getGenre().contains(Genre.valueOf(selectedGenre))))
-                .collect(Collectors.toList());
+    public List<Movie> filterMovieByQueryOrGenre(String searchQuery, String selectedGenre, String selectedYear, String selectedRating) {
+        StringBuilder queryBuilder = new StringBuilder();
+
+        if (!searchQuery.isEmpty()) {
+            queryBuilder.append("query=").append(searchQuery);
+        }
+        if (!selectedGenre.isEmpty()) {
+            if (queryBuilder.length() > 0) queryBuilder.append("&");
+            queryBuilder.append("genre=").append(selectedGenre);
+        }
+        if (!selectedYear.isEmpty()) {
+            if (queryBuilder.length() > 0) queryBuilder.append("&");
+            queryBuilder.append("releaseYear=").append(selectedYear);
+        }
+        if (!selectedRating.isEmpty()) {
+            if (queryBuilder.length() > 0) queryBuilder.append("&");
+            queryBuilder.append("ratingFrom=").append(selectedRating);
+        }
+
+        if (queryBuilder.length() == 0) {
+            return MovieAPI.getAllMovies();
+        }
+
+        return MovieAPI.getMoviesByQuery(queryBuilder.toString());
     }
 
     public void filterMovieByTitleAscDesc(boolean initialize) {
@@ -116,4 +176,37 @@ public class HomeController implements Initializable {
     public List<Movie> getAllMovies() {
         return allMovies;
     }
+
+
+    public String getMostPopularActor(List<Movie> movies) {
+        Map<String, Long> actorFrequency = movies.stream()
+                .flatMap(movie -> movie.getMainCast().stream())
+                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+
+        long maxFrequency = actorFrequency.values().stream()
+                .max(Long::compare)
+                .orElse(0L);
+
+        return actorFrequency.entrySet().stream()
+                .filter(entry -> entry.getValue() == maxFrequency)
+                .map(Map.Entry::getKey).collect(Collectors.joining());
+    }
+
+    public int getLongestMovieTitle(List<Movie> movies) {
+        return movies.stream()
+                .mapToInt(movie ->movie.getTitle().length())
+                .max().orElse(0);
+    }
+
+    public long countMoviesFrom(List<Movie> movies, String director) {
+        return movies.stream()
+                .filter(movie -> movie.getDirectors().stream().anyMatch(d -> d.equals(director)))
+                .count();
+    }
+
+    public List<Movie> getMoviesBetweenYears(List<Movie> movies, int startYear, int endYear) {
+        return movies.stream().filter(movie -> movie.getReleaseYear() >= startYear && movie.getReleaseYear() <= endYear)
+                .collect(Collectors.toList());
+    }
+
 }
